--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fullcalendar/interaction": "6.0.0-beta.2",
     "@fullcalendar/list": "6.0.0-beta.2",
     "@fullcalendar/timegrid": "6.0.0-beta.2",
+    "@ng-select/ng-select": "^10.0.2",
     "@ngx-loading-bar/core": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
     "@ngx-translate/core": "^14.0.0",
