--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "echarts": "^5.4.0",
     "mat-table-exporter": "^10.2.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "ng-apexcharts": "^1.7.4",
     "ng-click-outside": "^9.0.0",
     "ng-image-fullscreen-view": "^3.0.3",
